--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
@@ -108,7 +108,7 @@
                     <li><a href="/community/eventMobile">이벤트</a></li>   
                 </ul>
             </div>
-			<button class="btn_recording" onclick="location.href='/myPage/myPageMobile'">기록하기</button>
+			<button class="btn_recording" onclick="btnRecording()">기록하기</button>
             <div class="input_wrap">
                 <div class="input_cal" style="display: inline; position: static;">
                 	<input type="date" id="startDate" onchange="checkCalendar()" class="mb10">
@@ -200,6 +200,16 @@
    		}
    	}
    	
+ 	// 기록하기 로그인 후 사용
+	function btnRecording(sqNumber) {
+		if(sMbrSqVal == null || sMbrSqVal == ""){
+			modalAlertShow("로그인 후 이용하실 수 있습니다.", "login");
+			return;
+		} else {
+			location.href = '/myPage/myPageMobile';
+		}
+	}
+   	
    	// 커뮤니티 전시후기/소개 뿌려주기
    	function communityExhibitList(){
    		
@@ -261,8 +271,8 @@
    	        strHtml += '                    </div>';
    	        strHtml += '                    <div class="icon_box">';
    	        strHtml += '                        <ul>';
-   	        strHtml += '                            <li><p class="ico_good"></p><span>'+ exhibit.comtLikes +'</span></li>';
-   	        strHtml += '                            <li><p class="ico_scrap"></p><span>'+ exhibit.comtScraps +'</span></li>';
+   	        strHtml += '                            <li><p class="ico_good" onclick="likeCheckYn(' + exhibit.comtSq + ');" style="cursor: pointer;"></p><span>'+ exhibit.comtLikes +'</span></li>';
+   	        strHtml += '                            <li><p class="ico_scrap" onclick="scrapCheck(' + exhibit.comtSq + ');" style="cursor: pointer;"></p><span>'+ exhibit.comtScraps +'</span></li>';
    	        strHtml += '                            <li><p class="ico_hits"></p><span>'+ exhibit.comtViews +'</span></li>';
    	        strHtml += '                            <li><p class="ico_comments"></p><span>'+ exhibit.comtCmts +'</span></li>';
    	        strHtml += '                        </ul>';
@@ -337,6 +347,164 @@
    		
    		$("#"+ selectBoxId).append(strHtml);
    	}
+   	
+ // 좋아요 체크 여부 조회
+	function likeCheckYn(sqNumber) {
+		$.ajax({
+			type : "post",
+			url : "/member/myPage/likeCheck",
+			data : {
+				mbrSq : sMbrSqVal,
+				comtSq : sqNumber,
+			},
+			success : function(data) {
+				if(sMbrSqVal == null) {
+	        		modalAlertShow("로그인 후 이용하실 수 있습니다.", "login");
+				} else {
+					if (data > 0) {
+						if (confirm("해당 게시물에 좋아요를 취소하시겠습니까?")) {
+							likeDel(sqNumber);
+						}
+					} else {
+						if (confirm("해당 게시물에 좋아요를 추가하시겠습니까?")) {
+							likeAdd(sqNumber);
+						}
+					}
+				}
+			},
+			error : function(error) {
+				alert("오류 발생" + error);
+			}
+		});
+	}
+
+	// 좋아요 추가
+	function likeAdd(sqNumber) {
+		$.ajax({
+			type : "post",
+			url : "/member/myPage/likeAdd",
+			data : {
+				mbrSq : sMbrSqVal,
+				comtSq : sqNumber
+			},
+			success : function(data) {
+				if (data > 0 || data == null) {
+					alert("해당 게시물에 좋아요를 추가했습니다.");
+					location.reload();
+				} else {
+					alert("좋아요 추가 실패했습니다.");
+					location.reload();
+				}
+			},
+			error : function(error) {
+				alert("오류 발생" + error);
+			}
+		});
+	}
+
+	// 좋아요 취소
+	function likeDel(sqNumber) {
+		$.ajax({
+			type : "post",
+			url : "/member/myPage/likeDel",
+			data : {
+				mbrSq : sMbrSqVal,
+				comtSq : sqNumber
+			},
+			success : function(data) {
+				if (data > 0) {
+					alert("좋아요를 취소했습니다.");
+					location.reload();
+				} else {
+					alert("좋아요 취소 실패했습니다.");
+					location.reload();
+				}
+			},
+			error : function(error) {
+				alert("오류 발생" + error);
+			}
+		});
+	}
+   	
+   	
+   	// 커뮤니티 작품리스트 스크랩 버튼
+  	// 스크랩 체크
+	function scrapCheck(sqNumber){
+		$.ajax({
+	        type: "post",
+	        url: "/member/myPage/scrapCheck",
+	        data: {
+	        	mbrSq : sMbrSqVal,
+	        	comtSq : sqNumber
+	        },
+	        success: function(data) {
+	        	if(sMbrSqVal == null) {
+	        		modalAlertShow("로그인 후 이용하실 수 있습니다.", "login");
+				} else {
+		        	if(data > 0){
+		        		if(confirm("스크랩 목록에서 '제거'하시겠습니까?")){
+		        			scrapDel(sqNumber);
+		        	    }
+		        	}else{
+		        		if(confirm("스크랩 목록에 '추가'하시겠습니까?")){
+		        			scrapAdd(sqNumber);
+		        	    }
+		        	}
+				}
+	        },
+	        error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		});
+	}
+		
+	//스크랩 추가
+	function scrapAdd(sqNumber){
+		$.ajax({
+	        type: "post",
+	        url: "/member/myPage/scrapAdd",
+	        data: {
+	        	mbrSq : sMbrSqVal,
+	        	comtSq : sqNumber
+	        },
+	        success: function(data) {
+	        	if(data > 0){
+	        		alert("스크랩 목록에 '추가'되었습니다.");
+	        		location.reload();
+	        	}else{
+	        		alert("스크랩 목록 등록에 실패했습니다. 관리자에게 문의하세요.");
+	        		location.reload();
+	        	}
+	        },
+	        error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		});
+	}
+		
+	//스크랩 제거
+	function scrapDel(sqNumber){
+		$.ajax({
+	        type: "post",
+	        url: "/member/myPage/scrapDel",
+	        data: {
+	        	mbrSq : sMbrSqVal,
+	        	comtSq : sqNumber
+	        },
+	        success: function(data) {
+	        	if(data > 0){
+	        		alert("스크랩 목록에서 '제거'되었습니다.");
+	        		location.reload();
+	        	}else{
+	        		alert("스크랩 목록 제거에 실패했습니다. 관리자에게 문의하세요.");
+	        		location.reload();
+	        	}
+	        },
+	        error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		});
+	}
    	
  	// 페이지네이션 그려주기 
  	function setPagenation(count){
