--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -106,7 +106,8 @@
 		 if(!isMobile){
 			 window.location.href = "/myPage/main";
 		 }else{
-			 window.location.href = "/myPage/myPageMobile";
+			 //window.location.href = "/myPage/myPageMobile";
+			 window.location.href = "/myPage/leftNavMobile";
 		 }
 		 
  	 }
