커뮤티니 자랑하기, 전시소개/후기, 이슈 상세페이지 대표이미지 출력 display:none 처리 (이미지를 아예 안넣게 되면 각 리스트페이지에서 이미가 null로 되므로 협의 완료)

--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -155,9 +155,9 @@
     function setComtDetailInfo(){
     	var strHtml = '';
     	
-    	strHtml += '<div class="picture">';
+    	strHtml += '<div class="picture" style="display: none;">';
 	    strHtml += '    <img src="'+ comt.comtImgUrl +'" alt="" style="height: 500px; object-fit: contain;">';
-	    strHtml += '</div>';
+	    strHtml += '</div><br><br>';
 	    strHtml += '<h3>'+ comt.comtTitle +'</h3>';
 	    strHtml += '<div class="user_wrap">';
 	    strHtml += '    <div class="user">';
