--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -104,9 +104,13 @@
 	<div id="container">
         <div class="mypage_wrap">
             <div class="works_showingoff_detail_page_wrap">
-            	<div class="picture">
             	
-            	</div>
+            	<h2 class="mt50">자랑하기</h2>
+            
+            	<div class="picture" style="display: none;">
+            	
+            	</div><br><br>
+            	
             	<h3>
             	
             	</h3>
