--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_issue_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_issue_detailpage.html
@@ -155,9 +155,9 @@
     function setComtDetailInfo(){
     	var strHtml = '';
     	
-    	strHtml += '<div class="picture">';
+    	strHtml += '<div class="picture" style="display: none;">';
 	    strHtml += '    <img src="'+ comt.comtImgUrl +'" alt="" style="height: 500px; object-fit: contain;">';
-	    strHtml += '</div>';
+	    strHtml += '</div><br><br>';
 	    strHtml += '<h3>'+ comt.comtTitle +'</h3>';
 	    strHtml += '<div class="user_wrap">';
 	    strHtml += '    <div class="user">';
