자랑하기 수정 페에지 작품 수정하기 연동

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
@@ -275,14 +275,14 @@
         	for(i=0; i<data.length; i++){
                 if(i == 2){
                 	html += '<li class="pic_more">';
-                    html += '  	<a href="/deal/workDetail?SqNumber='+data[i].comtSq+'">';
+                    html += '  	<a href="/community/showingOffDetail?SqNumber='+data[i].comtSq+'">';
                     html += '		<span>+ '+total+'</span>';
                     html += '		<img src="'+data[i].comtImgUrl+'">';
                     html += '	</a>';
                     html += '</li>';
                 }else{
                 	html += '<li>';
-                    html += '	<a href="/deal/workDetail?SqNumber='+data[i].comtSq+'">';
+                    html += '	<a href="/community/showingOffDetail?SqNumber='+data[i].comtSq+'">';
                     html += '		<img src="'+data[i].comtImgUrl+'">';
                     html += '	</a>';
                     html += '</li>';
