대리 김가빈 미리보기 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
@@ -266,9 +266,9 @@
              </div>
             
             <!-- 대표니미지 영역 -->
-            <div class="modal-body" style="display: flex; justify-content: center;">
+            <!-- <div class="modal-body" style="display: flex; justify-content: center;">
                <img id="lp_exhibit_comt_img_url" width="653.53px" height="500px"/>
-            </div>
+            </div> -->
             
             <!-- 제목 영역 -->
             <div class="modal-body" style="display: flex;">
@@ -674,8 +674,8 @@
                
                if(data.result != null){
                   
-                  var inputComtImg = $("#imgUrl1").attr("src");
-                  $("#lp_exhibit_comt_img_url").attr("src", inputComtImg);
+                  /* var inputComtImg = $("#imgUrl1").attr("src");
+                  $("#lp_exhibit_comt_img_url").attr("src", inputComtImg); */
 
                   var inputComtTitle = $('input[name=title]').val();
                   $("#lp_exhibit_comt_title").text(inputComtTitle);
