--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
@@ -224,9 +224,9 @@
              </div>
             
             <!-- 대표니미지 영역 -->
-            <div class="modal-body" style="display: flex; justify-content: center;">
+            <!-- <div class="modal-body" style="display: flex; justify-content: center;">
                <img id="lp_issue_comt_img_url" width="653.53px" height="500px"/>
-            </div>
+            </div> -->
             
             <!-- 제목 영역 -->
             <div class="modal-body" style="display: flex;">
@@ -601,8 +601,8 @@
               
               if(data.result != null){
                  
-                 var inputComtImg = $("#imgUrl1").attr("src");
-                 $("#lp_issue_comt_img_url").attr("src", inputComtImg);
+                 /* var inputComtImg = $("#imgUrl1").attr("src");
+                 $("#lp_issue_comt_img_url").attr("src", inputComtImg); */
 
                  var inputComtTitle = $('input[name=title]').val();
                  $("#lp_issue_comt_title").text(inputComtTitle);
