--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
@@ -974,7 +974,7 @@
 	                        <li><button type="button" class="registration" onclick="myWorkReg()">등록</button></li>
 	                        <li><button type="button" onclick="myWorkStorage()">임시저장</button></li>
 	                        <!-- 2023.10.13 홍충기 display:none 처리 -->
-	                        <li><button type="button" id="previewBtn" style="display:none">미리보기</button></li>
+	                        <li><button type="button" onclick="workPreview()"><span>미리보기</span></button></li>
 	                        <li><button type="button" onclick="javascript:history.back();">취소</button></li>
 	                    </ul>
 	                </div>
@@ -1260,6 +1260,91 @@
 		</div>
 	</div>
 </div>
+<!-- 미리보리 모달창 태그 -->
+   <div class="modal fade modal-s" id="lp_mgz9Dtl_insight" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style=" width: auto;">
+      <div class="modal-dialog modal-baeg max-w1200 ">
+         <div class="modal-content">
+         
+            <!-- 헤더부분 -->
+            <div class="modal-header lp_mgz9DtlModalHearder" style="padding: 0;min-height: 0;">
+               <div class="baegs baegs_1">
+                   <div class="close close_1" onclick="closeMgz9Dtl_insight()">닫기</div>
+               </div>
+            </div>
+            
+            <!-- 윗 자랑하기 태그 -->
+            <div id="container">
+                 <div class="mypage_wrap">
+                     <div class="works_showingoff_detail_page_wrap mb0">
+                         <h2 class="mt50">자랑하기</h2>
+                     </div>
+                 </div>
+             </div>
+            
+            <!-- 대표니미지 영역 -->
+            <!-- <div class="modal-body" style="display: flex; justify-content: center;">
+               <img id="lp_issue_comt_img_url" width="653.53px" height="500px"/>
+            </div> -->
+            
+            <!-- 제목 영역 -->
+            <div class="modal-body" style="display: flex;">
+               <span id="lp_work_comt_title" style="font-size: 30px; font-weight: 500; padding-bottom: 30px;"></span>
+            </div>
+         
+            <!-- 회원정보 -->
+            <div class="works_showingoff_detail_page_wrap mb0">
+               <div class="user_wrap">
+                  <div class="user">
+                     <ul>
+                        <li class="pt5"><img src="/resources/img/logo_new.png"></li>
+                        <li class="user_name pr10"><span>DealingArt</span></li>
+                        <li class="mem_type">회원유형<span>아티스트</span></li>
+                        <li class="following"><button type="button">팔로잉</button></li>
+                     </ul>
+                  </div>
+                  <div class="icon_box">
+                     <ul>
+                        <li class="day">1999-01-01 00:00</li>
+                        <li>
+                        <p class="ico_good">
+                        </p>
+                        <span>0</span></li>
+                        <li>
+                        <p class="ico_scrap">
+                        </p>
+                        <span>0</span></li>
+                        <li>
+                        <p class="ico_hits">
+                        </p>
+                        <span>0</span></li>
+                        <li>
+                        <p class="ico_comments">
+                        </p>
+                        <span>0</span></li>
+                        <li>
+                        <p class="ico_report">
+                        </p>
+                        <span>0</span></li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+            <div class="gallery_keyword_wrap">
+               <p id="keywordList">
+                  <a href="#"># 모나리자</a>
+                  <a href="#"># 그대는모나리자</a>
+                  <a href="#"># 그녀</a>
+               </p>
+            </div>
+            
+            <!-- 상세내용 font-size: 15px !important;-->
+            <div class="box_pt20 box_con1" style="display: flex; justify-content: center;" >
+               <div id="lp_work_cntnt" style="max-width: 900px; padding-left: 20px; padding-right: 20px;" class=" ck-blurred ck ck-content ck-rounded-corners post-body no-drag" lang="en" dir="ltr" role="textbox" aria-label="Rich Text Editor, main" contenteditable="false">
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
 <script th:inline="javascript"> 
 $(function() {
 	if(sMbrSqVal == null || sMbrSqVal == ""){
@@ -2403,6 +2488,88 @@ function myWorkReg(){
             data.append('upload',file)
             this.xhr.send(data)
         }
+    }
+    
+  //미리보기 기능 메인
+    function workPreview(){
+       var mgzSq = 48;
+      $.ajax({
+       type: "post",
+         url: "/mgz9/selectMgz9Dtl",
+         data:{
+            mgzSq : mgzSq
+          },
+         success: function(data) {
+               var mgzDtl = null;
+               
+               if(data.result != null){
+                  
+                  /* var inputComtImg = $("#imgUrl1").attr("src");
+                  $("#lp_issue_comt_img_url").attr("src", inputComtImg); */
+
+                  var inputComtTitle = $("input[name=COLLcomtTitle]").val();
+                  $("#lp_work_comt_title").text(inputComtTitle);
+                  
+                  var keywrd = $("#COLLComtKeywrd").val();
+                  var keywrdList = keywrd.split(',');
+
+                  var keywrdStr = "";
+                  for(i=0; i<keywrdList.length; i++){
+                 	 keywrdStr += '<a># '+keywrdList[i]+'</a>';
+                  }
+                  $("#keywordList").empty();
+                  $("#keywordList").append(keywrdStr).trigger("create");
+                  
+                  
+                   var mgzContent = data.result.mgzContent; 
+                   $("#lp_work_cntnt").empty();
+                   
+               	 var timpStr = $("#COLLEditor").html();
+                    
+                 timpStr = timpStr.replaceAll("&lt;","<");
+                 timpStr = timpStr.replaceAll("&gt;",">");
+                 timpStr = timpStr.replaceAll("&amp;lt;","<");
+                 timpStr = timpStr.replaceAll("&amp;gt;",">");
+                 timpStr = timpStr.replaceAll("&amp;nbsp;"," ");
+                 timpStr = timpStr.replaceAll("&amp;amp;","&");
+                 
+                 //Table 수정 금지
+                 timpStr = timpStr.replaceAll("true","false");
+                 document.getElementById('lp_work_cntnt').innerHTML = timpStr;
+                   
+                $(".ck-widget__type-around__button").css("display","none");
+                $(".ck-widget").css("outline-style","none");
+                $(".ck-widget__selection-handle").css("display","none");
+                   
+                   var appDevice =   $("#appDevice").val();
+                   if(appDevice == "MOBILE") {
+                     $("#editor > div").css('font-size', '11px');
+                     $("#editor > div").css('padding-left', '0px');
+                      $("#editor > div").css('padding-right', '0px');
+                }
+                   $("body").css("overflow", "hidden");
+                   $('#lp_mgz9Dtl_insight').modal({backdrop: 'static', keyboard: false})  
+                   $("#lp_mgz9Dtl_insight").modal("show");
+                   //2022-08-29 : 브라우져 URL 변경
+                   history.pushState(null, null, '?mgzSq='+mgzSq);
+                   
+               }else{
+                  modalAlertShow("검색 결과가 없습니다."); 
+                  $("#lp_work_cntnt").empty();
+               }
+            },           
+            error: function(error) {
+               var errorJson = JSON.stringify(error);
+                console.log(errorJson);
+            }
+          });
+    }
+
+     //MGZ9 콘첸츠 모달 닫기
+     function closeMgz9Dtl_insight(){
+       
+       $("body").css("overflow", "scroll");
+       $("#lp_mgz9Dtl_insight").modal("hide");
     }
 </script>
     
