거래 작품상세페이지 버튼 CSS 오류사항 수정사항 적용

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -287,29 +287,12 @@
 								</li>
 							</ul>
 							<div class="bat-box">
-								<button type="button" class="ba-btn1 por" id="btn_purchaseOrBid"
-									onclick="btn_purchaseOrBid_onclick()">
-									<span>구매하기</span>
-									<button type="button" class="ba-btn1 por">
-										<span>요청하기</span>
-									</button>
-								<button type="button" class="ba-btn3" onclick="javascript:history.back();">
-									<span>목록으로 돌아가기</span>
-										<button type="button" class="ba-btn3" id="btn_history" data-toggle="modal" data-target="#bidHistory">
-									<img src="/resources/img/de/mo/icon-2.jpg" />
-									<span>응찰히스토리</span>
-								</button>
-								</button>
-								</button>
-								
-								<!--
-								<button type="button" class="ba-btn2"
-									onclick="javascript:fnModalAlert();">
-									<img src="/resources/img/de/mo/icon-1.jpg" /><span>공유하기</span>
-								</button>
-								  -->
-							
-								
+								<button type="button" class="ba-btn1 por" id="btn_purchaseOrBid" onclick="btn_purchaseOrBid_onclick()"><span>구매하기</span></button>
+								<button type="button" class="ba-btn1 por"><span>요청하기</span></button>
+								<button type="button" class="ba-btn3 por" onclick="javascript:history.back();"><span>목록으로 돌아가기</span></button>
+								<button type="button" class="ba-btn3 " id="btn_history" data-toggle="modal" data-target="#bidHistory"><img src="/resources/img/de/mo/icon-2.jpg" /><span>응찰히스토리</span></button>
+								<!-- <button type="button" class="ba-btn2" onclick="javascript:fnModalAlert();"><img src="/resources/img/de/mo/icon-1.jpg" /><span>공유하기</span></button> -->
+							</div>
 
 						</div>
 
