커뮤니티 검색결과 없을 시 맨화면만 나오는 부분 -> 데이터가 없을 경우 검색결과없음 모달창 화면 출력 변경

--- a/src/main/resources/templates/thymeleaf/fo/community/community_event.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_event.html
@@ -239,30 +239,32 @@
     				
     				var list = data.result.eventList;
     				var html = "";
-    				
-    				$.each(list, function(idx, obj) {
-    					var cnt = idx + 1;
-    					if(cnt == 1 || cnt % 4 == 0) {
-    						html += "<div class='event_row "+ (isFirst ? "mt0" : "") +"'>";
-    	    				html += "	<ul>";
-    					}
-    					html += "			<li>";
-    					html += "				<div class='event_box'>";
-    					html += "					<div class='img'>";
-    					html += "						<div class='"+ (obj.isEventEnd ? "ico_ongoing'>진행중" : "ico_endprogress'>진행<br>종료") +"</div>";
-    					html += "						<img src="+ obj.bnnMpImgUrl +" alt='' style='width: 480px; height: 480px;'>";
-    					html += "					</div>";
-    					html += "					<div class='text'>"+ obj.bnnStartDt + " ~ " + obj.bnnEndDt + "<br>" + obj.bnnTitle +"</div>";
-    					html += "				</div>";
-    					html += "			</li>";
-    					if(cnt != 1 && cnt % 3 == 0) {
-    	    				html += "	</ul>";
-    						html += "</div>";
-    					}
-	   					isFirst = false;
-    				});
-    				
-    				
+    				if(data.length > 0){
+    					$.each(list, function(idx, obj) {
+        					var cnt = idx + 1;
+        					if(cnt == 1 || cnt % 4 == 0) {
+        						html += "<div class='event_row "+ (isFirst ? "mt0" : "") +"'>";
+        	    				html += "	<ul>";
+        					}
+        					html += "			<li>";
+        					html += "				<div class='event_box'>";
+        					html += "					<div class='img'>";
+        					html += "						<div class='"+ (obj.isEventEnd ? "ico_ongoing'>진행중" : "ico_endprogress'>진행<br>종료") +"</div>";
+        					html += "						<img src="+ obj.bnnMpImgUrl +" alt='' style='width: 480px; height: 480px;'>";
+        					html += "					</div>";
+        					html += "					<div class='text'>"+ obj.bnnStartDt + " ~ " + obj.bnnEndDt + "<br>" + obj.bnnTitle +"</div>";
+        					html += "				</div>";
+        					html += "			</li>";
+        					if(cnt != 1 && cnt % 3 == 0) {
+        	    				html += "	</ul>";
+        						html += "</div>";
+        					}
+    	   					isFirst = false;
+        				});
+    				}else{
+    					modalAlertShow("검색 결과가 없습니다.");
+    				}
+
     				$(".event_wrap").append(html).trigger("create");
     				
     				pageInfo.start += (pageInfo.start == 0) ? pageInfo.size : 3;
