배포 전 이영중이사 footer 부분 주소지, 대표번호 수정 및 팩스번호 삭제 요청사항 적용

--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -24,9 +24,9 @@
 					<div class="footer-text">상호 : 맨션나인 주식회사  대표 : 이영선  사업자등록번호 : 473-81-01206 <a href="javascript:void(0);" onclick="window.open('http://www.ftc.go.kr/bizCommPop.do?wrkr_no=4738101206', 'bizCommPop', 'width=750, height=700;');">[사업자정보확인]</a> </div>
 					<div class="footer-text">
 						<ol>
-							<li>주소 : 03970 서울특별시 마포구 성산동 258-22</li>
-							<li>대표번호 : 1533-3024</li>
-							<li>팩스번호 : 02-336-2920</li>
+							<li>주소 : (06222) 서울특별시 강남구 역삼동 723-29 1F</li>
+							<li>대표번호 : 070-4267-7371</li>
+							<!-- <li>팩스번호 : 02-336-2920</li> -->
 						</ol>
 					</div>
 					<div class="footer-text">
